# askme

./: .gitignore  HDBSCAN_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KMEANS_TREE_GUIDE.md  README.md  TREE_TO_PDF_GUIDE.md  pyproject.toml  tree_node.json  tree_node_with_children.json
docs/: METRICS.md
examples/: README.md  demo_bertopic_baseline.py  demo_evaluator.py  demo_hdbscan_baseline.py  demo_selection.py  demo_supervised_metrics.py  demo_tree_to_pdf.py  evalsim_example.py  recipe1.toml  use_kmeans_tree_builder.py  use_kmeans_tree_recursion.py  use_query_function.py  use_rtp_builder.py  use_rtp_builder_with_retry.py  use_rtp_recursion.py  use_tree_to_pdf.py
experiments/learning/: learning_chunking_batching.py  learning_faiss_ids_filter.py  learning_faiss_kmeans.py  learning_label_propagation.py
experiments/rtp/: 01-rtp.py  02-rtp-builder.py  03-eval-entailment.py
experiments/rtp_evaluation/: README.md  build_kmeans_tree_loop.py  build_kmeans_trees.py  build_rtp_trees.py  build_trees.py  (+17 more)
tests/: demo_metrics.py  example_rtp_metrics.py  test_azure.py  test_bertopic_baseline_lightweight.py  test_check_entailment_nli.py  test_chunking_and_pooling.py  test_config_factory.py  test_evalsim.py  test_evaluator.py  test_gemini.py  test_hdbscan_baseline.py  test_hdbscan_baseline_lightweight.py  test_issue_8_integration.py  test_kmeans_tree_builder.py  test_label_propagation.py  test_logging.py  test_make_index.py  test_make_questions.py  test_metrics.py  test_nli.py  test_query.py  test_rtp_builder.py  test_rtp_recursion.py  test_rtp_trees.py  test_rtp_with_metrics.py  test_self_supervised_metrics.py  test_supervised_metrics.py  test_tree_depth.py  test_tree_to_pdf.py  test_unsupervised_metrics.py  validate_bertopic.py  validate_hdbscan.py
(+67 files in other folders)
