[project]
name = "askme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tiago Tavares", email = "tiagoft@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.16.0",
    "datasets>=2.0.0",
    "faiss-gpu-cu12>=1.13.1",
    "graphviz>=0.20.0",
    "insperdatasets",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "protobuf>=6.33.2",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.25.1",
    "pymupdf>=1.26.6",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "typer>=0.20.0",
    "wandb>=0.23.1",
]

[project.scripts]
askme = "askme.app:app" # This line adds your Typer app as a command-line entry point

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
insperdatasets = { git = "https://github.com/InsperML/insperdatasets" }

[tool.pytest.ini_options]
markers = [
    "gpu: marks tests that require GPU",
    "llm: marks tests that make cloud LLM API calls",
    "slow: marks slow tests",
    "integration: end-to-end tests",
]
addopts = "-m 'not (gpu or llm)'"
filterwarnings = [
    "ignore::DeprecationWarning:opentelemetry.*",
]